brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/AI_Assignment_Logs__c.object-meta.xml
<CustomObject>
    <label>AI Assignment Logs</label>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>AI Assignment Logs ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Assignment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>