brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Candidate_Interview_Change__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Interview_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Interview Change</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Assignment Logs</relationshipLabel>
    <relationshipName>AI_Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>