brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Compass_R_scheduler_run_by__c.field-meta.xml
<CustomField>
    <fullName>Compass_R_scheduler_run_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass R scheduler run by</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>AI Assignment Logs (Compass R scheduler run by)</relationshipLabel>
    <relationshipName>AI_Assignment_Logs3</relationshipName>
    <type>Lookup</type>
</CustomField>