brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Compass_R_scheduler_run_on__c.field-meta.xml
<CustomField>
    <fullName>Compass_R_scheduler_run_on__c</fullName>
    <label>Compass R scheduler run on</label>
    <type>DateTime</type>
</CustomField>