brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Compass_R_scheduler_run_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Compass_R_scheduler_run_Response_Body__c</fullName>
    <label>Compass R scheduler run Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>