brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Compass_R_scheduler_run_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Compass_R_scheduler_run_Status_Code__c</fullName>
    <label>Compass R scheduler  run Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>