brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>AI Assignment Logs (Interview)</relationshipLabel>
    <relationshipName>AI_Assignment_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>