brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Interview_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview ID</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>AI Assignment Logs</relationshipLabel>
    <relationshipName>AI_Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>