brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Interviews_ID__c.field-meta.xml
<CustomField>
    <fullName>Interviews_ID__c</fullName>
    <label>Interviews ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>