brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Last_Support_Person1__c.field-meta.xml
<CustomField>
    <fullName>Last_Support_Person1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Support Person</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>AI Assignment Logs (Last Support Person)</relationshipLabel>
    <relationshipName>AI_Assignment_Logs5</relationshipName>
    <type>Lookup</type>
</CustomField>