brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Last_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Last_Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Support Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Logs_Last_Support_Person</relationshipName>
    <type>Lookup</type>
</CustomField>