brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Main_AI_Assignment_scheduler_run_by__c.field-meta.xml
<CustomField>
    <fullName>Main_AI_Assignment_scheduler_run_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main AI Assignment scheduler run by</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>AI Assignment Logs</relationshipLabel>
    <relationshipName>AI_Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>