brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Main_AI_Assignment_scheduler_run_on__c.field-meta.xml
<CustomField>
    <fullName>Main_AI_Assignment_scheduler_run_on__c</fullName>
    <label>Main AI Assignment scheduler run on</label>
    <type>DateTime</type>
</CustomField>