brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Main_AI_Assignment_scheduler_run_respons__c.field-meta.xml
<CustomField>
    <fullName>Main_AI_Assignment_scheduler_run_respons__c</fullName>
    <label>Main AI Assignment scheduler run respons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>