brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Main_AI_Assignment_scheduler_run_status__c.field-meta.xml
<CustomField>
    <fullName>Main_AI_Assignment_scheduler_run_status__c</fullName>
    <label>Main AI Assignment scheduler run status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>