brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Manual_Main_AI_Assignment_Flow_run_by__c.field-meta.xml
<CustomField>
    <fullName>Manual_Main_AI_Assignment_Flow_run_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Main AI Assignment Flow run by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Assignment_Logs4</relationshipName>
    <type>Lookup</type>
</CustomField>