brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Manual_Main_AI_Assignment_run_by__c.field-meta.xml
<CustomField>
    <fullName>Manual_Main_AI_Assignment_run_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Main AI Assignment run by</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>AI Assignment Logs (Manual Main AI Assignment run by)</relationshipLabel>
    <relationshipName>AI_Assignment_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>