brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Manual_Main_AI_Assignment_run_on__c.field-meta.xml
<CustomField>
    <fullName>Manual_Main_AI_Assignment_run_on__c</fullName>
    <label>Manual Main AI Assignment run on</label>
    <type>DateTime</type>
</CustomField>