brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Manual_Main_AI_Assignment_run_Response__c.field-meta.xml
<CustomField>
    <fullName>Manual_Main_AI_Assignment_run_Response__c</fullName>
    <label>Manual Main AI Assignment run Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>