brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Manual_Main_AI_Assignment_run_status_cod__c.field-meta.xml
<CustomField>
    <fullName>Manual_Main_AI_Assignment_run_status_cod__c</fullName>
    <label>Manual Main AI Assignment run status cod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>