brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/New_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>New_Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Support Person</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>AI Assignment Logs (New Support Person)</relationshipLabel>
    <relationshipName>AI_Assignment_Logs4</relationshipName>
    <type>Lookup</type>
</CustomField>