brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/preferred_support_person_initiated_by__c.field-meta.xml
<CustomField>
    <fullName>preferred_support_person_initiated_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>preferred support person initiated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Assignment_Logs5</relationshipName>
    <type>Lookup</type>
</CustomField>