brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/preferred_support_person_initiated_On__c.field-meta.xml
<CustomField>
    <fullName>preferred_support_person_initiated_On__c</fullName>
    <label>preferred support person initiated On</label>
    <type>DateTime</type>
</CustomField>