brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reassignment_by__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassignment  by</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>AI Assignment Logs (Reassignment  by)</relationshipLabel>
    <relationshipName>AI_Assignment_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>