brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reassignment_on__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_on__c</fullName>
    <label>Reassignment on</label>
    <type>DateTime</type>
</CustomField>