brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reassignment_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Other_Reason__c</fullName>
    <label>Reassignment Other  Reason</label>
    <length>20</length>
    <type>Text</type>
</CustomField>