brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reshuffle_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Reshuffle_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reshuffle Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>