brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reshuffle_Initiated_On__c.field-meta.xml
<CustomField>
    <fullName>Reshuffle_Initiated_On__c</fullName>
    <label>Reshuffle Initiated On</label>
    <type>DateTime</type>
</CustomField>