brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reshuffle_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reshuffle_Reason_Comment__c</fullName>
    <label>Reshuffle Reason Comment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>