brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reshuffle_Run_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reshuffle_Run_Reason__c</fullName>
    <label>Reshuffle Run Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous round extended for current Interview Support Person</fullName>
            </value>
            <value>
                <fullName>Interview Support Person unavailable</fullName>
            </value>
            <value>
                <fullName>Scheduling conflict</fullName>
            </value>
            <value>
                <fullName>Interview Support Person at capacity</fullName>
            </value>
            <value>
                <fullName>Skill / domain mismatch</fullName>
            </value>
            <value>
                <fullName>Candidate preference</fullName>
            </value>
            <value>
                <fullName>Time zone mismatch</fullName>
            </value>
            <value>
                <fullName>Escalation from team lead / manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>