brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Reshuffle_run_response_body__c.field-meta.xml
<CustomField>
    <fullName>Reshuffle_run_response_body__c</fullName>
    <label>Reshuffle run response body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>