brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/reshuffle_run_status_code__c.field-meta.xml
<CustomField>
    <fullName>reshuffle_run_status_code__c</fullName>
    <label>reshuffle run status code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>