brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Rollback_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollback Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Assignment_Logs3</relationshipName>
    <type>Lookup</type>
</CustomField>