brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Rollback_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Response_Body__c</fullName>
    <label>Rollback Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>