brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Rollback_Run_On__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Run_On__c</fullName>
    <label>Rollback Run On</label>
    <type>DateTime</type>
</CustomField>