brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <length>255</length>
    <type>Text</type>
</CustomField>