brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Round_Info__c.field-meta.xml
<CustomField>
    <fullName>Round_Info__c</fullName>
    <label>Round Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>