brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/testing_field_for_jenkins__c.field-meta.xml
<CustomField>
    <fullName>testing_field_for_jenkins__c</fullName>
    <label>testing field for jenkins</label>
    <length>250</length>
    <type>Text</type>
</CustomField>