brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Total_Interview_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Total_Interview_Assigned__c</fullName>
    <label>Total Interview Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>