brain/sources/prod-metadata/objects/AI_Assignment_Logs__c/fields/Total_Interviews_Unassigned__c.field-meta.xml
<CustomField>
    <fullName>Total_Interviews_Unassigned__c</fullName>
    <label>Total Interviews Unassigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>